start main-header

--- a/app/index.html
+++ b/app/index.html
@@ -34,12 +34,33 @@
   <!-- Здесь пишем код -->
   <header class="main-header">
     <div class="container">
+      <nav class="main-header-navigation">
+        <ul class="main-header-navigation__ul">
+          <li class="main-header-navigation__li">
+            <a class="main-header-navigation__a" href="#">Home</a>
+          </li>
+          <li class="main-header-navigation__li">
+            <a class="main-header-navigation__a" href="#">Features</a>
+          </li>
+          <li class="main-header-navigation__li">
+            <a class="main-header-navigation__a" href="#">Countdown</a>
+          </li>
+          <li class="main-header-navigation__li">
+            <a class="main-header-navigation__a" href="#">Pricing</a>
+          </li>
+          <li class="main-header-navigation__li">
+            <a class="main-header-navigation__a" href="#">Testimonials</a>
+          </li>
+          <li class="main-header-navigation__li">
+            <a class="main-header-navigation__a" href="#">Contact</a>
+          </li>
+        </ul>
+      </nav>
     </div>
   </header>
 
   <main>
     <div class="container">
-      <h1>Hello, Wolrd!</h1>
     </div>
   </main>
 
@@ -54,11 +75,11 @@
 	<script src="libs/html5shiv/html5shiv-printshiv.min.js"></script>
 	<script src="libs/respond/respond.min.js"></script>
 	<![endif]-->
-	
+
   <!-- build:js js/main.js -->
   <script src="js/script-complied.js"></script>
   <!-- endbuild -->
-  
+
   <!--
   <script>
     var scr = {
